css/style.css
body {
	padding-top: 50px;
}

.img-login {
	width: 80%;
	margin: 10px 10%;
	cursor: pointer;
	border: 10px solid rgba(1,1,1,0);
	transition: border 0.2s linear;
	-o-transition: border 0.2s linear; /* opera */
    -ms-transition: border 0.2s linear; /* IE 10 */
    -moz-transition: border 0.2s linear; /* Firefox */
    -webkit-transition: border 0.2s linear;
	box-sizing: border-block;
}

@keyframes hover {
	from {
		border: 10px solid rgba(1,1,1,0);
	}
	to {
		border: 0px solid rgba(1,1,1,0);
	}
}

.img-login:hover {
	border: 0px solid rgba(1,1,1,0);
	animation-name: hover;
	animation-duration: 0.2s;
}

@keyframes blur {
	from {
		-webkit-filter: blur(0px);
		-moz-filter: blur(0px);
		-o-filter: blur(0px);
		-ms-filter: blur(0px);
		filter: blur(0px);
	}
	to {
		-webkit-filter: blur(4px);
		-moz-filter: blur(4px);
		-o-filter: blur(4px);
		-ms-filter: blur(4px);
		filter: blur(4px);
	}
}

.img-blur {
	animation-name: blur;
	animation-duration: 0.2s;
	-webkit-filter: blur(4px);
	-moz-filter: blur(4px);
	-o-filter: blur(4px);
	-ms-filter: blur(4px);
	filter: blur(4px);
}

.offline-img {
	-webkit-filter: opacity(0.6) grayscale(100%);
	-moz-filter: opacity(0.6) grayscale(100%);
	-o-filter: opacity(0.6) grayscale(100%);
	-ms-filter: opacity(0.6) grayscale(100%);
	filter: opacity(0.6) grayscale(100%);
}

.footer {
	width: 100%;
	padding: 16px 0 10px 0;
	background-color: #eee;
	position: inherit;
	bottom: 0;
}

.filter {
	width: 100%;
	height: 100%;
	position: fixed;
	background: rgba(0,0,0,0.5);
	z-index: 1000;
	text-align: center;
	display: none;
}

.popup {
	margin-top: 20px;
	padding: 40px;
	background-color: #eee;
	display: inline-block;
	width: 100%;
	max-width: 400px;
}

#divider {
	border: 1.5px solid #eee;
	margin: 20px 0;
}

#checkboxlist {
	padding: 0 0 0 75px;
  max-height: 300px;
  overflow-y: auto;
}

.tag_subtitle {
	margin-top: 15px;
}

.checkbox {
	padding: 0 0 0 17px;
}

@media (max-width: 768px){
	#checkboxlist {
		padding: 0 0 0 20px;
	  max-height: 300px;
	  overflow-y: auto;
	}
}

